--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cra-template": "1.2.0",
     "dompurify": "^3.2.3",
     "express-rate-limit": "^7.5.0",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
