--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,65 @@
 # Node modules
 node_modules/
+backend/node_modules/
+functions/node_modules/
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Environment variables (Frontend)
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-
-# Backend-specific
-backend/node_modules/       # Exclude backend node_modules directory
-backend/.env                # Exclude backend environment variables file
-backend/*.log               # Exclude any logs generated in the backend
-backend/.pnp                # Exclude backend Yarn PnP file
-backend/pnpm-lock.yaml      # Exclude backend package manager lock file
-backend/.DS_Store           # Exclude macOS-specific system files in backend
-backend/.cache/             # Exclude backend cache directory
-backend/tmp/                # Exclude temporary files in backend
-
-# Firebase-related files
 firebase-debug.log
-.firebaserc
-firebase.json
-.firebase/                  # Exclude the .firebase directory to prevent accidental tracking
+stripe*.log
 
-# Build files
+# Environment variables
+.env
+.env.*
+backend/.env
+functions/.env
+
+# Build and distribution files
 build/
-backend/build/              # Exclude backend build artifacts
+backend/build/
+functions/build/
+functions/dist/
 
-# Cache
+# Cache and temporary files
 .cache/
 .tmp/
-.vscode/
+backend/.cache/
+backend/tmp/
+functions/tmp/
+public/static/
+firebase_emulator_cache/
 
-# System files
+# System and OS files
 .DS_Store
 Thumbs.db
 
-# IDE specific files
+# IDE and editor files
+.vscode/
 *.idea/
 *.iml
 *.sublime-workspace
+.editorconfig
+.eslintrc
+*.bak
+*.swp
 
-# Dependency and package lock files (if not using)
+# Dependency lock files
 package-lock.json
 yarn.lock
 
 # Test coverage reports
 coverage/
 
-# Generated files by Firebase functions
-functions/node_modules/
-functions/lib/
-functions/.env
+# Firebase-related files
+.firebaserc
+firebase.json
+.firebase/
 
-# Local storage emulators (optional, if using Firebase Emulators)
-firebase_emulator_cache/
-
-# React-related cache
-public/static/
+# Configuration files
+config/serviceAccountKey.json
+functions/*.json  # Exclude all JSON files in functions, adjust if needed
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# backend-specific
-/backend/node_modules/       # Backend dependencies
-/backend/.env                # Backend environment variables
-/backend/*.log               # Backend log files
-/backend/cache/              # Backend cache directory
-/backend/tmp/                # Backend temporary files
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Add this line to ignore the service account key
-config/serviceAccountKey.json
